--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "qmegle-websocket-server",
+  "name": "qmegle-ws",
   "version": "1.0.0",
-  "description": "A WebSocket signaling server for Qmegle chat app.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "ws": "^8.13.0"
-  },
-  "engines": {
-    "node": ">=14"
+    "ws": "^8.13.0",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   }
 }
